cbits/Bullet.h

int btSoftBody_CJoint_m_maxlife_get(void *c); //attribute: int btSoftBody_CJoint->m_maxlife
// attribute not supported: //attribute: ::btVector3[2] btSoftBody_CJoint->m_rpos
void btSoftBody_CJoint_m_normal_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_CJoint->m_normal
void btSoftBody_CJoint_m_normal_get(void *c,float* a);
void btSoftBody_CJoint_m_friction_set(void *c,float a); //attribute: ::btScalar btSoftBody_CJoint->m_friction
float btSoftBody_CJoint_m_friction_get(void *c); //attribute: ::btScalar btSoftBody_CJoint->m_friction
void* btSoftBody_Cluster_new(); //constructor: Cluster  ( ::btSoftBody::Cluster::* )(  ) 
void btSoftBody_Cluster_free(void *c);
 
void btSoftBody_Cluster_m_adamping_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_adamping
float btSoftBody_Cluster_m_adamping_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_adamping
void btSoftBody_Cluster_m_av_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Cluster->m_av
void btSoftBody_Cluster_m_av_get(void *c,float* a);
void btSoftBody_Cluster_m_clusterIndex_set(void *c,int a); //attribute: int btSoftBody_Cluster->m_clusterIndex
int btSoftBody_Cluster_m_clusterIndex_get(void *c); //attribute: int btSoftBody_Cluster->m_clusterIndex
void btSoftBody_Cluster_m_collide_set(void *c,int a); //attribute: bool btSoftBody_Cluster->m_collide
int btSoftBody_Cluster_m_collide_get(void *c); //attribute: bool btSoftBody_Cluster->m_collide
void btSoftBody_Cluster_m_com_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Cluster->m_com
void btSoftBody_Cluster_m_com_get(void *c,float* a);
void btSoftBody_Cluster_m_containsAnchor_set(void *c,int a); //attribute: bool btSoftBody_Cluster->m_containsAnchor
int btSoftBody_Cluster_m_containsAnchor_get(void *c); //attribute: bool btSoftBody_Cluster->m_containsAnchor
// attribute not supported: //attribute: ::btVector3[2] btSoftBody_Cluster->m_dimpulses
void btSoftBody_Cluster_m_framerefs_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btVector3> btSoftBody_Cluster->m_framerefs
void* btSoftBody_Cluster_m_framerefs_get(void *c); //attribute: ::btAlignedObjectArray<btVector3> btSoftBody_Cluster->m_framerefs
void btSoftBody_Cluster_m_framexform_set(void *c,float* a); //attribute: ::btTransform btSoftBody_Cluster->m_framexform
void btSoftBody_Cluster_m_framexform_get(void *c,float* a);
void btSoftBody_Cluster_m_idmass_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_idmass
float btSoftBody_Cluster_m_idmass_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_idmass
void btSoftBody_Cluster_m_imass_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_imass
float btSoftBody_Cluster_m_imass_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_imass
void btSoftBody_Cluster_m_invwi_set(void *c,float* a); //attribute: ::btMatrix3x3 btSoftBody_Cluster->m_invwi
void btSoftBody_Cluster_m_invwi_get(void *c,float* a);
void btSoftBody_Cluster_m_ldamping_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_ldamping
float btSoftBody_Cluster_m_ldamping_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_ldamping
void btSoftBody_Cluster_m_leaf_set(void *c,void* a); //attribute: ::btDbvtNode * btSoftBody_Cluster->m_leaf
void* btSoftBody_Cluster_m_leaf_get(void *c); //attribute: ::btDbvtNode * btSoftBody_Cluster->m_leaf
void btSoftBody_Cluster_m_locii_set(void *c,float* a); //attribute: ::btMatrix3x3 btSoftBody_Cluster->m_locii
void btSoftBody_Cluster_m_locii_get(void *c,float* a);
void btSoftBody_Cluster_m_lv_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Cluster->m_lv